# personal-finance-app

./: Cargo.toml  README.md
brainstorming/: debug.html  temp.py  temp2.py
data/: financial_state_influencers.json
src/: bin.rs  data.rs  lib.rs  main.rs  models.rs  processing.rs  utils.rs
tests/: test_processing.rs
tests/data/: financial_state_influencers_base.json
