[package]
name = "personal-finance"
version = "0.1.0"
authors = ["Wilhelm <va3093@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
serde = { version = "^1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }